feat: implement match simulation engine and automated logs storage