@@ -9,7 +9,9 @@ import dev.m4tt3o.mini_cs.repository.*;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+import com.fasterxml.jackson.databind.ObjectMapper;
 
+import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
@@ -23,6 +25,7 @@ public class MatchServiceImpl implements MatchService {
     private final WeaponTemplateRepository weaponTemplateRepository;
     private final MatchEngine matchEngine;
     private final GameConfig gameConfig;
+    private final ObjectMapper objectMapper;
 
     @Override
     @Transactional
@@ -41,6 +44,94 @@ public class MatchServiceImpl implements MatchService {
 
     @Override
     @Transactional
+    public void simulateAndSaveMatch(Match match) {
+        User playerA = match.getPlayerA();
+        User playerB = match.getPlayerB();
+
+        // 1. Get loadouts for both players
+        Loadout playerATLoadoutEntity = loadoutRepository.findByUserAndSide(playerA, "T")
+                .orElseThrow(() -> new RuntimeException("T Loadout not found for user: " + playerA.getUsername()));
+        Loadout playerACTLoadoutEntity = loadoutRepository.findByUserAndSide(playerA, "CT")
+                .orElseThrow(() -> new RuntimeException("CT Loadout not found for user: " + playerA.getUsername()));
+        Loadout playerBTLoadoutEntity = loadoutRepository.findByUserAndSide(playerB, "T")
+                .orElseThrow(() -> new RuntimeException("T Loadout not found for user: " + playerB.getUsername()));
+        Loadout playerBCTLoadoutEntity = loadoutRepository.findByUserAndSide(playerB, "CT")
+                .orElseThrow(() -> new RuntimeException("CT Loadout not found for user: " + playerB.getUsername()));
+
+        List<WeaponArchetype> playerATLoadout = mapLoadoutToArchetypes(playerATLoadoutEntity);
+        List<WeaponArchetype> playerACTLoadout = mapLoadoutToArchetypes(playerACTLoadoutEntity);
+        List<WeaponArchetype> playerBTLoadout = mapLoadoutToArchetypes(playerBTLoadoutEntity);
+        List<WeaponArchetype> playerBCTLoadout = mapLoadoutToArchetypes(playerBCTLoadoutEntity);
+
+        // 2. Initialize starting states
+        PlayerState pAStart = new PlayerState(playerA.getId(), playerA.getUsername(), gameConfig.getStartingHp(), 0, Collections.emptyList(), Collections.emptySet());
+        PlayerState pBStart = new PlayerState(playerB.getId(), playerB.getUsername(), gameConfig.getStartingHp(), 0, Collections.emptyList(), Collections.emptySet());
+
+        // 3. Simulate Round 1 (Player A is T, Player B is CT)
+        List<CombatRoundRecord> round1Records = matchEngine.simulateMatch(pAStart, playerATLoadout, pBStart, playerBCTLoadout);
+
+        // Winner of Round 1
+        boolean playerAWonRound1 = false;
+        int round1Turns = 0;
+        if (!round1Records.isEmpty()) {
+            CombatRoundRecord lastRecord = round1Records.get(round1Records.size() - 1);
+            playerAWonRound1 = lastRecord.playerB().hp() <= 0;
+            round1Turns = round1Records.size();
+        }
+
+        // 4. Simulate Round 2 (Player A is CT, Player B is T)
+        // Here, Player B is T (attacker, 1st param) and Player A is CT (defender, 2nd param)
+        List<CombatRoundRecord> round2Records = matchEngine.simulateMatch(pBStart, playerBTLoadout, pAStart, playerACTLoadout);
+
+        // Winner of Round 2
+        boolean playerAWonRound2 = false;
+        int round2Turns = 0;
+        if (!round2Records.isEmpty()) {
+            CombatRoundRecord lastRecord = round2Records.get(round2Records.size() - 1);
+            playerAWonRound2 = lastRecord.playerA().hp() <= 0;
+            round2Turns = round2Records.size();
+        }
+
+        // 5. Combine records
+        List<CombatRoundRecord> allRecords = new ArrayList<>();
+        allRecords.addAll(round1Records);
+        allRecords.addAll(round2Records);
+
+        // 6. Determine winner & Apply Turn Efficiency Tie-breaker if needed
+        User winnerUser = null;
+        if (playerAWonRound1 && playerAWonRound2) {
+            winnerUser = playerA;
+        } else if (!playerAWonRound1 && !playerAWonRound2) {
+            winnerUser = playerB;
+        } else {
+            // Match score is 1-1. Use turn efficiency.
+            int playerATurns = playerAWonRound1 ? round1Turns : round2Turns;
+            int playerBTurns = !playerAWonRound1 ? round1Turns : round2Turns;
+
+            if (playerATurns < playerBTurns) {
+                winnerUser = playerA;
+            } else if (playerBTurns < playerATurns) {
+                winnerUser = playerB;
+            } else {
+                winnerUser = playerA; // Default tie-breaker
+            }
+        }
+
+        match.setWinner(winnerUser);
+        match.setStatus("COMPLETED");
+
+        try {
+            String serializedLogs = objectMapper.writeValueAsString(allRecords);
+            match.setLogsJson(serializedLogs);
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to serialize combat logs", e);
+        }
+
+        matchRepository.save(match);
+    }
+
+    @Override
+    @Transactional
     public CombatRoundRecord executeTurn(Long matchId, Long playerId, Long actionId) {
         Match match = matchRepository.findById(matchId)
                 .orElseThrow(() -> new RuntimeException("Match not found"));
@@ -55,12 +146,46 @@ public class MatchServiceImpl implements MatchService {
 
         return matchEngine.resolveTurn(attacker, defender, action, 1);
     }
-    
+
     public Long queueMatch(String username) { return 1L; }
     public String getQueueStatus(Long ticketId) { return "MATCH_FOUND"; }
-    public MatchStateResponse getMatchState(Long matchId) { return new MatchStateResponse(1, "HP:100", "HP:100", "Start"); }
+
+    @Override
+    public MatchStateResponse getMatchState(Long matchId) {
+        Match match = matchRepository.findById(matchId)
+                .orElseThrow(() -> new RuntimeException("Match not found"));
+
+        List<CombatRoundRecord> logs = getMatchLogs(matchId);
+        String lastLog = "Start match";
+        String playerAStatus = "HP:100";
+        String playerBStatus = "HP:100";
+        int round = 1;
+
+        if (!logs.isEmpty()) {
+            CombatRoundRecord lastRecord = logs.get(logs.size() - 1);
+            playerAStatus = "HP:" + lastRecord.playerA().hp();
+            playerBStatus = "HP:" + lastRecord.playerB().hp();
+            lastLog = lastRecord.actionLog();
+        }
+
+        return new MatchStateResponse(round, playerAStatus, playerBStatus, lastLog);
+    }
+
     public void submitAction(Long matchId, String username, Long weaponId) {}
-    public List<String> getMatchLogs(Long matchId) { return List.of("Start match"); }
+
+    @Override
+    public List<CombatRoundRecord> getMatchLogs(Long matchId) {
+        Match match = matchRepository.findById(matchId)
+                .orElseThrow(() -> new RuntimeException("Match not found"));
+        if (match.getLogsJson() == null) {
+            return Collections.emptyList();
+        }
+        try {
+            return objectMapper.readValue(match.getLogsJson(), new com.fasterxml.jackson.core.type.TypeReference<List<CombatRoundRecord>>() {});
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to deserialize logs", e);
+        }
+    }
 
     private PlayerState mockPlayerState(User user) {
         Loadout loadout = loadoutRepository.findByUserAndSide(user, "T")
@@ -68,7 +193,7 @@ public class MatchServiceImpl implements MatchService {
                 .orElseThrow(() -> new RuntimeException("No loadout found for " + user.getUsername())));
 
         List<WeaponArchetype> items = loadout.getItems().stream()
-                .map(i -> mapToArchetype(i.getTemplate())).toList();
+                .map(this::mapInstanceToArchetype).toList();
 
         List<WeaponArchetype> hand = matchEngine.drawHand(items);
 
@@ -79,6 +204,33 @@ public class MatchServiceImpl implements MatchService {
                 gameConfig.getBaseEnergy(),
                 hand,
                 Collections.emptySet()
+        );
+    }
+
+    private List<WeaponArchetype> mapLoadoutToArchetypes(Loadout loadout) {
+        return loadout.getItems().stream()
+                .map(this::mapInstanceToArchetype).toList();
+    }
+
+    private WeaponArchetype mapInstanceToArchetype(UserWeaponInstance inst) {
+        WeaponTemplate t = inst.getTemplate();
+        int energyCost = Math.max(0, t.getEnergyCost() + inst.getCostModifier());
+        int damage = Math.max(0, t.getDamage() + inst.getDamageModifier());
+        int drawWeight = Math.max(1, t.getDrawWeight() + inst.getDrawWeightModifier());
+
+        return new WeaponArchetype(
+                t.getId(),
+                t.getName(),
+                t.getType(),
+                t.getSide(),
+                energyCost,
+                damage,
+                drawWeight,
+                t.getCritChance() != null ? t.getCritChance() : 0.0,
+                t.getCritMultiplier() != null ? t.getCritMultiplier() : 1.0,
+                t.getStatusEffect() != null ? t.getStatusEffect() : "NONE",
+                t.getImageUrl(),
+                t.getDescription()
         );
     }
 
